演出等改善

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Devi_Dice_WebGL.loader.js";
+      var loaderUrl = buildUrl + "/dd-release.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Devi_Dice_WebGL.data",
-        frameworkUrl: buildUrl + "/Devi_Dice_WebGL.framework.js",
-        codeUrl: buildUrl + "/Devi_Dice_WebGL.wasm",
+        dataUrl: buildUrl + "/dd-release.data",
+        frameworkUrl: buildUrl + "/dd-release.framework.js",
+        codeUrl: buildUrl + "/dd-release.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Devil_Dice",
@@ -53,8 +53,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
       loadingBar.style.display = "block";
 
