--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/dd-release.loader.js";
+      var loaderUrl = buildUrl + "/新しいフォルダー.loader.js";
       var config = {
-        dataUrl: buildUrl + "/dd-release.data",
-        frameworkUrl: buildUrl + "/dd-release.framework.js",
-        codeUrl: buildUrl + "/dd-release.wasm",
+        dataUrl: buildUrl + "/新しいフォルダー.data",
+        frameworkUrl: buildUrl + "/新しいフォルダー.framework.js",
+        codeUrl: buildUrl + "/新しいフォルダー.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Devil_Dice",
